adjust for java 16