@@ -77,26 +77,6 @@
               </remove>
               <concat>META-INF/sisu/javax.inject.Named, META-INF/services/org.apache.lucene.codecs.PostingsFormat, META-INF/spring.*</concat>
               <attach>true</attach>
-              <extensions>
-                <extension>if [ -z $JAVA_MODULES ] ; then</extension>
-                <!-- auto-detect; see https://www.oracle.com/technetwork/java/javase/versioning-naming-139433.html -->
-                <!-- * filter out JAVA_TOOL_OPTIONS in case they are set -->
-                <!-- * takes less than 1/10 of a second: -->
-                <extension>  export JAVA_VERSION=$(java -version 2&gt;&amp;1 | grep -v JAVA_TOOL_OPTIONS | head -n 1 | cut -f 3 -d ' ' | cut -f 2 -d '"')</extension>
-                <extension>  # echo java ${JAVA_VERSION}</extension>
-                <extension>  case "$JAVA_VERSION" in</extension>
-                <extension>    "1."*) export JAVA_MODULES=false ;;</extension>
-                <extension>    *) export JAVA_MODULES=true ;;</extension>
-                <extension>  esac</extension>
-                <extension>fi</extension>
-                <extension>if [ "$JAVA_MODULES" != "false" ] ; then</extension>
-                <extension>  OPTIONS="--illegal-access=deny $OPTIONS"</extension>
-                <extension>fi</extension>
-              </extensions>
-
-              <!-- upload ... -->
-              <symlink>${env.CISOTOOLS_HOME}/bin/stool</symlink>
-              <target>${env.CISOTOOLS_HOME}/stool</target>
             </configuration>
             <goals>
               <goal>generate</goal>
